# Freecord

./: .gitignore  LICENSE  README.md  server.py
Backend/: main.py  server.py
Backend/modules/: ServerClasses.py  ServerEvents.py
Backend/modules/database/: Database.py  DatabaseEvents.py  IDManager.py  docs_by_ai.md
Frontend/: CMakeLists.txt  Freecord  imgui.ini  main.cpp
